# kiwix-rag

./: .gitignore  README.md  batch_index.sh  batch_manifest.example  build_index.py  build_kiwix_library.sh  chunk_filter.py  config.example.yaml  eval.py  extract_zim.py  filter_survivorlibrary.py  kiwix-rag.service  kiwix-serve.service  migrate_chroma_to_pg.py  ocr.py  pg_client.py  pyproject.toml  rag.py  requirements.txt  resegment_amateur_radio.py  resegment_survivorlibrary.py  sample_ocr.py  stage_for_pi.sh  start-kiwix.sh  update_pi.sh  verify_migration.py  web.py
docs/superpowers/plans/: 2026-06-13-public-ready-refactor.md  2026-06-14-memory-bounded-retrieval.md
docs/superpowers/specs/: 2026-06-14-memory-bounded-retrieval-design.md
kiwix_rag/: cli.py  collection_size.py  config.py  extract.py  filter.py  groups.py  index.py  retrieval.py  router.py  server.py
templates/: index.html
tests/: conftest.py  test_collection_cache.py  test_collection_size.py  test_config.py  test_extract.py  test_filter.py  test_index.py  test_pg_client.py  test_retrieval.py  test_router.py  test_server.py
